--- a/css/style.css
+++ b/css/style.css
@@ -64,8 +64,7 @@ a{
 }
 
 *:focus{
-  border-style: 3px dashed;
-  border-color:  #417243;
+  border: 3px dashed #417243;
 }
 
 /*Req 5*/
@@ -117,7 +116,6 @@ table{
     border: 5px #000000 solid;
     text-align: center;
     border-radius: 50px;
-    border-width: 100%;
     margin: auto;
     border-collapse: separate;
 }
